# cfugue

./: MusicNote.sln
Common/: EventHandler.h
ConsoleTestApp/: stdafx.cpp
MusicNote/: CMakeLists.txt  MusicNote.sln  ReadMe.txt
MusicNote/ConsoleTestApp/: ConsoleTestApp.cpp  ConsoleTestApp.vcproj  ReadMe.txt
MusicNote/MusicNoteDLL/: MusicNoteDLL.vcproj  MusicNoteLib.h
MusicNote/MusicNoteLib/: MIDIEventManager.h  MIDIRenderer.h  MString.h  MusicNoteLib.cpp  MusicNoteLib.h  MusicNoteLib.vcproj  MusicStringParser.cpp  MusicStringParser.h  Player.h
MusicNote/cmake/modules/: FindTse3.cmake
MusicNote/docs/: Doxyfile  custom.css  doxyfooter.html
MusicNote/guide/: chapter1.tex  guide.tcp  guide.tex  spiebook.bst  svmono.cls
MusicNote/include/: AlsaDriver.h  CFugueDll.h  CFugueLib.h  ChannelPressure.h  Chords.h  ControllerEvent.h  Dictionary.h  Instrument.h  KeySignature.h  Layer.h  MIDIEventManager.h  MIDIRenderer.h  MString.h  MidiDevice.h  MidiRenderer.h  MidiTimer.h  MusicInstrument.h  MusicNoteDll.h  MusicNoteLib.h  MusicStringParser.h  Note.h  Parser.h  ParserListener.h  PitchBend.h  Player.h  PolyphonicPressure.h  Talam.h  Tempo.h  Time.h  TimeToken.h  Voice.h
MusicNote/include/jdkmidi/: advancedsequencer.h  driver.h  driverdump.h  fileread.h  filereadmultitrack.h  filewrite.h  manager.h  midi.h  msg.h  multitrack.h  showcontrol.h  smpte.h  song.h  tick.h  track.h
MusicNote/libjdkmidi/: project.mk
MusicNote/libjdkmidi/examples/: jdkmidi_rewrite_midifile.cpp
MusicNote/libjdkmidi/include/jdkmidi/: driverwin32.h  edittrack.h  fileshow.h  manager.h  msg.h  sequencer.h  sysex.h  tick.h
MusicNote/libjdkmidi/src/: jdkmidi_driver.cpp  jdkmidi_driverdump.cpp  jdkmidi_edittrack.cpp  jdkmidi_fileread.cpp  jdkmidi_filereadmultitrack.cpp  jdkmidi_filewrite.cpp  jdkmidi_filewritemultitrack.cpp  jdkmidi_msg.cpp  jdkmidi_sequencer.cpp  jdkmidi_showcontrol.cpp  jdkmidi_showcontrolhandler.cpp  jdkmidi_track.cpp
MusicNote/libjdkmidi/src/win32/: jdkmidi_driverwin32.cpp
MusicNote/src/CFugueDLL/: CFugueDLL.idl  CFugueDLL.rc  CFugueDLL.rgs  ReadMe.txt  dlldatax.c  stdafx.cpp
MusicNote/src/CFugueLib/: Chords.cpp  Dictionary.cpp  Documentation.cpp  MidiRenderer.cpp  MidiTimer.cpp  MusicStringParser.cpp  ReadMe.txt  stdafx.h  targetver.h
MusicNote/src/CFugueLib/MIDIDrivers/: AlsaDriver.cpp  MidiDevice.cpp  RtMidi.cpp
MusicNote/src/MusicNoteDLL/: CMakeLists.txt  MusicNoteDLL.cpp  MusicNoteDLL.def  MusicNoteDLL.rc  MusicNoteDLL_i.c  MusicNoteDLL_i.h  ReadMe.txt  Resource.h  dlldatax.c  dllmain.cpp  dllmain.h  stdafx.cpp  stdafx.h  targetver.h
MusicNote/src/MusicNoteLib/: Chords.cpp  Dictionary.cpp  Documentation.cpp  Instrument.cpp  MIDIRenderer.cpp  MusicInstrument.cpp  MusicNoteLib.cpp  MusicStringParser.cpp  Parser.cpp  Player.cpp  ReadMe.txt  TokenParsers.cpp  TokenParsers.h  stdafx.h  targetver.h
MusicNote/src/MusicNoteLib/MIDIDrivers/: AlsaDriver.cpp  MidiDevice.cpp  RtMidi.cpp
MusicNote/src/QtVuMeter/: midiincombobox.cpp  midiincombobox.h  midioutcombobox.cpp  midioutcombobox.h  qvumeter.cpp  qvumeter.h
MusicNote/test/: CMakeLists.txt
MusicNote/test/ConsoleTestApp/: ConsoleTestApp.cpp
MusicNote/test/DLLTestApp/: ConsoleTestApp.cpp  DLLTestApp.cpp  ReadMe.txt  stdafx.cpp  stdafx.h  targetver.h
MusicNote/test/DotNetTestApp/: MainForm.cs  PInvokeDefs.cs  Program.cs
MusicNote/test/PlayerTestApp/: MainForm.Designer.cs  MainForm.cs  MainForm.resx  PInvokeDefs.cs  Program.cs
MusicNote/test/QtTestApp/: QtTse3Play.h  main.cpp  qttse3playvisual.cpp  qttse3playvisual.h  qttse3playvisual.ui  qvumeter.cpp  qvumeter.h
MusicNote/test/QtTse3Player/: QtTse3Play.cpp  qttse3playvisual.cpp  qttse3playvisual.h  qttse3playvisual.ui
MusicNote/test/SampleUV/: SampleUV.pro  SampleUV.sln  SampleUV.vcxproj  SampleUV.vcxproj.filters  mainwindow.cpp  mainwindow.ui  ui_mainwindow.h
MusicNote/test/SampleVU/: main.cpp
MusicNote/test/StaticLibTestApp/: SampleApp.cpp  stdafx.cpp  stdafx.h  targetver.h
MusicNote/vs-build/: DLLTestApp.vcxproj  DotNetTestApp.csproj  Doxyfile  MusicNoteDLL.vcxproj.filters  MusicNoteLib.vcxproj  QtTestApp.pro  StaticLibTestApp.vcxproj.filters  doxyfooter.html  doxygen.css
MusicNoteLib/: MusicNoteLib.h  MusicNoteLib.vcproj  ReadMe.txt  TokenParsers.h  stdafx.cpp
PlayByEar/: LongMsg.cpp  LongMsg.h  MIDIDevsDlg.cpp  MIDIDevsDlg.h  MIDIInDevice.cpp  MIDIInDevice.h  MIDIKeyboard.cpp  MIDIKeyboard.h  MIDIMsg.h  MIDIOutDevice.cpp  MIDIOutDevice.h  PianoCtrl.cpp  PianoCtrl.h  PianoKeys.cpp  PlayByEar.cpp  PlayByEar.h  PlayByEar.rc  PlayByEar.sln  PlayByEar.vcproj  PlayByEarDlg.cpp  PlayByEarDlg.h  QASession.cpp  QASession.h  ReadMe.txt  Resource.h  ShortMsg.cpp  ShortMsg.h  UserManual.html  midi.h  stdafx.cpp  stdafx.h
PlayByEar/BootStrapper/: BootStrapper.cpp  BootStrapper.rc  BootStrapper.vcproj  ReadMe.txt  Resource.h  ResourceManipulator.cpp  ResourceManipulator.h  stdafx.cpp
PlayByEar/Dependencies/QHtm/: qhtm.h  qhtmlight.lib
PlayByEar/res/: PlayByEar.rc2
include/: AlsaDriver.h  Chords.h  Parser.h  Tempo.h
include/jdkmidi/: file.h  filewritemultitrack.h  keysig.h
src/CFugueDLL/: CMakeLists.txt  dllmain.cpp
src/CFugueLib/: stdafx.cpp
src/CFugueLib/MIDIDrivers/: RtMidi.cpp
tags/Release-2014-May-10/: CMakeLists.txt
tags/Release-2014-May-10/cmake/modules/: FindTse3.cmake
tags/Release-2014-May-10/guide/: guide.tex  spiebook.cls
tags/Release-2014-May-10/include/: CFugueLib.h  ChannelPressure.h  MidiDevice.h  Note.h  ParserListener.h  Player.h  PolyphonicPressure.h  Talam.h  Voice.h
tags/Release-2014-May-10/include/jdkmidi/: advancedsequencer.h  driver.h  driverdump.h  driverwin32.h  fileshow.h  filewrite.h  manager.h  matrix.h  parser.h  process.h  queue.h  sequencer.h  showcontrolhandler.h  tempo.h  tick.h  world.h
tags/Release-2014-May-10/src/CFugueDLL/: Resource.h
tags/Release-2014-May-10/vs-build/: Documentation.vcxproj  Doxyfile  MusicNoteDLL.vcxproj  MusicNoteLib.vcxproj  doxygen.css
test/SampleVU/: SampleVU_mainwindow.cpp
test/StaticLibTestApp/: SampleApp.cpp
vs-build/: StaticLibTestApp.vcxproj
(+12 files in other folders)
